# TailoredTasteTuner

./: .gitignore  Dockerfile  LICENSE  README.md  gcloud_run.sh  pyproject.toml
.devcontainer/: devcontainer.json  post-attach.sh
data/: grid_predict.csv  input_test.csv
src/: app.py  config.py  mypy.ini  navbar.py  sidebar.py
src/assets/: custom.css
src/model/: create_gridded_prediction_data.py  gp.py  optimize.py  optuna_botorchsampler.py  optuna_model_config.py  optuna_prediction.py  return_candidates.py  sample_code_optimize.py
src/pages/: analysis.py  evaluation.py  experiment.py  home.py  optimize.py  results.py  settings.py
src/services/: extract_dataframe_from_bigquery.py  insert_to_bigquery.py
