[project]
name = "tailoredtastetuner"
version = "0.1.0"
description = "tailoredtastetuner"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash (>=3.0.4,<4.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)",
    "dash-chart-editor (>=0.0.1a5,<0.0.2)",
    "optuna (>=4.3.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
    "botorch (>=0.13.0,<0.14.0)",
    "optuna-integration (>=4.3.0,<5.0.0)",
    "dash-ag-grid (>=31.3.1,<32.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "bigquery (>=0.0.45,<0.0.46)",
    "google-cloud-bigquery[pandas] (>=3.34.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tailoredtastetuner"
version = "0.1.0"
packages = [{ include = "src"}]

[[tool.mypy.overrides]]
module = [
"dash_bootstrap_components.*", 
"dash_ag_grid.*",
"pandas.*", 
"optuna.*", 
"dash_chart_editor.*",
"botorch.*",
"optuna_integration.*",
"gpytorch.*",
"plotly.*",
]
ignore_missing_imports = true